<resources>
    <string name="app_name">HeroWorkoutSampleApp</string>
    <string name="logo_content_description">App\'s logo</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="login">Einloggen</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="email_invalid">Bitte gib eine gültige E-mail Adresse ein</string>
    <string name="capital_letter_missing">Bitte geb einen Großbuchastaben ein</string>
    <string name="password_too_short">Bitte gib mindestens 12 Zeichen ein</string>
    <string name="password_number_missing">Bitte gib mindestens eine Zahl ein</string>
    <string name="special_character_missing">Bitte gib mindestens ein Sonderzeichen ein</string>
    <string name="password_invalid">Bitte gib ein gültiges Passwort ein</string>
    <string name="you_have_successfully_logged_in">Sie haben sich erfolgreich eingeloggt!</string>
    <string name="all_fields_must_be_valid">E-Mail und Passwort müssen gültig sein</string>
    <string name="password_autofill">PASSWORT</string>
    <string name="email_autofill">E-MAIL</string>
</resources>